feat(core): select only requested measure columns